[package]
name = "signald-rust"
version = "0.1.0"
authors = ["angelocarly <angelo.carly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde - used to serialize/deserialize json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# futures = "0.3"
tokio = { version = "0.2", features = ["full", "uds"] }
# tokio-uds = { version = "0.2.6", feature = "uds" }
