[package]
name = "signald-rust"
version = "0.1.4"
authors = ["angelocarly <angelo.carly@protonmail.com>"]
description = """
A library to interface with Signald
"""
keywords = ["signald"]
categories = ["asynchronous", "api-bindings"]
repository = "https://github.com/angelocarly/signald-rust"
license = "MIT"
readme = "README.md"
autoexamples = true
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bus = "2.2.3"
tokio = { version = "0.2.13", features = ["macros", "time", "rt-threaded"] }
futures = "0.3.4"

[[example]]
name = "message_listener"
path = "examples/messagelistener.rs"
